# jellyfin_music

./: .gitignore  LICENSE  MANIFEST.in  MIGRATION.md  QUICKSTART.md  install.sh  jellyfin-music-organizer  jellyfin-music-organizer.desktop  pyproject.toml  readme.md  requirements.txt  setup.py  verify-installation.sh
.augment/rules/: archon-claude.md
archive/windows/: README.md
jellyfin_music_organizer/: __init__.py  custom_dialog.py  main.py  music_organizer.py  organize_thread.py
